--- a/css/style.css
+++ b/css/style.css
@@ -13,14 +13,17 @@ nav{
 }
 nav .navigationroute{
     
-    display: inline-flex;
-    flex-basis: 65%;
+    display: flex;
+    flex-basis: 30%;
     justify-content: space-evenly;
     text-align: center;
     align-items: center;
     list-style: none;
    
 
+}
+header h1{
+    text-align: center;
 }
 .main_stuff{
     font-size: 20px;
@@ -33,7 +36,7 @@ nav ul li{
     display: inline-block;
     padding: 8px;
     margin:20px;
-    flex-basis: 30%;
+    flex-basis: 10%;
     align-items: center;
     text-align: center;
 }
